[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://assets/images/bgfruitninja.jpg" type="Texture" id=2]
[ext_resource path="res://assets/fonts/font150.fnt" type="BitmapFont" id=3]
[ext_resource path="res://scripts/inputproc.gd" type="Script" id=4]
[ext_resource path="res://assets/images/bomb100.png" type="Texture" id=5]

[sub_resource type="GDScript" id=1]

resource/name = "gameover"
script/source = "extends Control

var canStartGame = false

func _ready():
	set_process_input(true)


func _input(event):
	if event.type == InputEvent.SCREEN_TOUCH and canStartGame:
		get_tree().reload_current_scene()


func start():
	show()
	get_node(\"Animation\").play(\"GameOver\")
	get_node(\"RestartGame\").start()


func _on_RestartGame_timeout():
	canStartGame = true
	get_node(\"PlayAgain\").show()
"

[sub_resource type="Animation" id=2]

length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("GameOver:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/scale = Vector2( 0.8, 0.6 )
texture = ExtResource( 2 )
centered = false

[node name="Label" type="Label" parent="."]

visibility/opacity = 0.6
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 233.0
margin/top = 600.0
margin/right = 1055.0
margin/bottom = 730.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.317647, 0.180392, 0.0823529, 1 )
text = "NT BROTHERS"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Fruits" type="Node2D" parent="."]

[node name="Generrator" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="InputProc" type="Node2D" parent="."]

editor/display_folded = true
script/script = ExtResource( 4 )

[node name="Interval" type="Timer" parent="InputProc"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Limit" type="Timer" parent="InputProc"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="ControlScore" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Score" type="Label" parent="ControlScore"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 50.0
margin/top = 8.0
margin/right = 129.0
margin/bottom = 138.0
custom_fonts/font = ExtResource( 3 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Bomb1" type="Sprite" parent="ControlScore"]

transform/pos = Vector2( 1025, 65 )
texture = ExtResource( 5 )

[node name="Bomb2" type="Sprite" parent="ControlScore"]

transform/pos = Vector2( 1125, 65 )
texture = ExtResource( 5 )

[node name="Bomb3" type="Sprite" parent="ControlScore"]

transform/pos = Vector2( 1225, 65 )
texture = ExtResource( 5 )

[node name="ControlGameOver" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = SubResource( 1 )

[node name="GameOver" type="Label" parent="ControlGameOver"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 244.0
margin/top = 271.0
margin/right = 1015.0
margin/bottom = 401.0
custom_fonts/font = ExtResource( 3 )
text = "GAME OVER!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PlayAgain" type="Label" parent="ControlGameOver"]

visibility/visible = false
rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 401.0
margin/top = 474.0
margin/right = 1146.0
margin/bottom = 604.0
custom_fonts/font = ExtResource( 3 )
text = "PLAY AGAIN"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Animation" type="AnimationPlayer" parent="ControlGameOver"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/GameOver = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="RestartGame" type="Timer" parent="ControlGameOver"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="timeout" from="Generrator" to="." method="_on_Generrator_timeout"]

[connection signal="timeout" from="InputProc/Interval" to="InputProc" method="_on_Interval_timeout"]

[connection signal="timeout" from="InputProc/Limit" to="InputProc" method="_on_Limit_timeout"]

[connection signal="timeout" from="ControlGameOver/RestartGame" to="ControlGameOver" method="_on_RestartGame_timeout"]


